tests/baselines/reference/tsxAttributeResolution15.errors.txt
tests/cases/conformance/jsx/file.tsx(11,10): error TS2322: Type '{ prop1: string; }' is not assignable to type 'IntrinsicAttributes & IntrinsicClassAttributes<BigGreeter> & { children?: ReactNode; }'.
  Property 'prop1' does not exist on type 'IntrinsicAttributes & IntrinsicClassAttributes<BigGreeter> & { children?: ReactNode; }'.
tests/cases/conformance/jsx/file.tsx(14,44): error TS7017: Element implicitly has an 'any' type because type 'typeof globalThis' has no index signature.


==== tests/cases/conformance/jsx/file.tsx (2 errors) ====
    import React = require('react');
    
    class BigGreeter extends React.Component<{ }, {}> {
        render() {
            return <div>Default hi</div>;
        }
        greeting: string;
    }
    
    // Error
    let a = <BigGreeter prop1="hello" />
             ~~~~~~~~~~
!!! error TS2322: Type '{ prop1: string; }' is not assignable to type 'IntrinsicAttributes & IntrinsicClassAttributes<BigGreeter> & { children?: ReactNode; }'.
!!! error TS2322:   Property 'prop1' does not exist on type 'IntrinsicAttributes & IntrinsicClassAttributes<BigGreeter> & { children?: ReactNode; }'.
    
    // OK
    let b = <BigGreeter ref={(input) => { this.textInput = input; }} />
                                               ~~~~~~~~~
!!! error TS7017: Element implicitly has an 'any' type because type 'typeof globalThis' has no index signature.
    let c = <BigGreeter data-extra="hi" />